# gpt-mlx

./: .gitignore  README.md  attention.py  constants.py  generate.py  gpt.py  prepare.py  pyproject.toml  train.py  transformer.py  utils.py
notebooks/: loss.ipynb
