[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mlx = "^0.12.0"
tiktoken = "^0.6.0"
datasets = "^2.18.0"
tqdm = "^4.66.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
