[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
mlx = "^0.21.1"
tiktoken = "^0.8.0"
datasets = "^3.2.0"
tqdm = "^4.67.1"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
